testsuite/lab2-testsuite/good/separate_namespaces.cc
int x(bool x) { return 0; }

int main() {
  let int x = 5;
  return x;
}
