testsuite/lab2-testsuite/bad/redecl_var_after_block.cc
int main() {
	let int x, y;
	{
		let int y;
	}
	let int x;
	return 0;
}
